	  This can trigger currently hidden bugs ("unbound variable" or
	  "parameter not set" indicate such bugs); please report them if you
	  encounter them. The hope is that in the long run, this step will help
	  to eliminate hidden bugs, although in the moment it can cause pain.
	- Thanks already for some such reports to:
	  Michał Bartoszkiewicz <mbartoszkiewicz at gmail.com>
	- Honour ebuild md5 whenever provided (e.g. by >=portage-2.3.1)
	- Make timestamp optional for assign method (e.g. for >=portage-2.3.1)
	- Honour TMPDIR as requested by POSIX
	- Some more Bourne shell compatibility
	- Internal change: Turn readers into a class
	- Add gcc-6 options

*eix-0.31.7
	Martin Väth <martin at mvath.de>:
	- Support EAPI and (optionally) REQUIRED_USE
	- Extend MATCH_ALGORITHM_EXACT default value to let a pure number match
	  exactly by default (useful for EAPI matching)
	- Reintroduce extended version globbing to match portage:
	  https://github.com/vaeth/eix/issues/21
	  https://bugs.gentoo.org/show_bug.cgi?id=572178
	- Fix metadata-{flat,assign} confusion
	- Fix: version parsing must omit [
	  https://github.com/vaeth/eix/issues/20
	- Fix memory leak of eix -t (delete all_packages) and sqlite
	- Fix xml output with illegal use flags

*eix-0.31.6
	Martin Väth <martin at mvath.de>:
	- Fix further memory leak in PrintFormat
	- Bugfix: Manually destroy root_node; do not do this in FormatParser.
	  This hopefully fixes the segfault of bug 571108

*eix-0.31.5
	Martin Väth <martin at mvath.de>:
	- Adapt version wildcard matching to pms and portage implementation
	- Fix memory leaks in PrintFormat. Thanks to
	  Agostino Sarubbo <ago at gentoo.org> for reporting and for
	  pointing out that PAX kernel blocks --fsanitize=address
	- Add --enable-nopie-security to make --fsanitize=address work better
	- Switch back to .tar.xz releases as default (github supports it now)

*eix-0.31.4
	Thomas D. <whissi at whissi.de>: