@@ -28,6 +28,8 @@
 
 .B eix-installed
 
+.B eix-etcat
+
 .B eix-functions.sh
 
 .B eix-header
@@ -105,6 +107,16 @@ B<eix-installed> ist ein einfaches Skript, das alle installierten Pakete (und ih
 ausgibt, und das prüfen kann, welche Pakete mit/ohne Repository- oder Buildtime-Information gebaut wurden
 (vgl. die Beschreibung zu B<CHECK_INSTALLED_OVERLAYS> und B<USE_BUILD_TIME>).
 Mehr zu B<eix-installed> erfahren Sie durch den Aufruf B<eix-installed -h>.
+
+B<eix-etcat> ist ein Wrapper, der eix mit einer Konfiguaration aufruft,
+so dass das Verhalten ähnlich dem von B<etcat -v> aus alten
+app-portage/gentoolkit Versionen oder dessen aktuelle Version von
+https://github.com/proteusx/etcat/ (z.B. app-portage/etcat aus dem mv overlay)
+ist.
+Die Ausgabe ist analog (durch Aufruf von B<eix --print FORMAT_ETCAT> bzw.
+B<eix --print FORMAT_VERSION_ETCAT> kann man die benutzten Format-Strings
+anschauen), und die voreingestellte Eingabe akzeptiert eine Folge von
+Paketnamen (die Angabe der Kategorie ist optional).
 
 B<masked-packages> ist ein Hilfsprogramm für Skripte, das die Argumente gegen
 eine Maskenliste testet.
@@ -1265,13 +1277,14 @@ B<slotfirst>/B<slotlast> äquivalent zu B<first>/B<last>, und B<oneslot> ist 1.
 Dies darf nur in I<VARIABLE> im Zusammenhang von Versionsausgaben benutzt werden.
 Sie gibt die B<EAPI> einer verfügbaren oder installierten Version aus.
 .TP
-.BR slot ", " isslot ", " fullslot ", " isfullslot ", " subslot ", " issubslot ", "overlayver ", " overlaynum ", "  virtual
+.BR slot ", " isslot ", " fullslot ", " isfullslot ", " subslot ", " issubslot ", "overlayver ", " overlaynum ", " overlayvername ", " virtual
 Dies darf nur in I<VARIABLE> im Zusammenhang von Versionsausgaben benutzt werden.
 Es wird der aktuelle Slot bzw. der Overlay der aktuellen Version ausgegeben.
 B<overlayver> ist leer, falls das gesamte Paket aus nur einem Overlay stammt;
 für diesen Fall sollte B<overlaykey> zur Ausgabe des Overlays benutzt werden.
 Im Gegensatz dazu enthält B<overlaynum> stets die Nummer des Overlays
 (als Text ohne Farben) oder ist leer, falls die Version keinem Overlay entstammt.
+B<overlayvername> ist das Label (Name) (oder Pfad für unbekanntes oder leeres Label) des Overlays.
 B<virtual> ist genau dann nichtleer, wenn die Version aus einem virtuellen Overlay kommt.
 B<isslot>, B<isfullslot> und B<issubslot> testen nur of Slot, voller Slot bzw. Subslot
 trivial sind und geben in diesem Fall 1 aus (sonst nichts).
@@ -1399,8 +1412,8 @@ Vgl. die Bemerkungen zu B<--binary>.
 .B mainrepo
 Ist 1 oder leer, je nachdem, ob mindestens eine verfügbare Version zum Hauptrepository 0 (typischerweise: gentoo) gehört.
 .TP
-.B overlaykey
-Falls alle Versionen zum selben Overlay gehören, wird "[overlaykey]" mit entsprechcenden Farben ausgegeben.
+.BR overlaykey ", " overlayname
+Falls alle Versionen zum selben Overlay gehören, wird "[overlaykey]" (in entsprechenden Farben) bzw. "overlaylabel" ausgegeben.
 .TP
 .BR havevirtual ", " havenonvirtual
 Ist 1 or leer, je nachdem ob mindestens eine verfügbare Version aus einem (nicht)virtuellen Overlay stammt.
